gc monitor